# cuda-kernel-loader

./: CITATION.cff  CMakeLists.txt  README.md
include/ckl/: cmrc_loader.h  common.h  errors.h  internal_common.h  kernel_loader.h
src/: ckl_nvcc_args.inl.in  errors.cpp  kernel_loader.cpp
tests/: CMakeLists.txt  test1.cpp  test_code_generation.cpp  test_constants.cpp  test_loaders.cpp
tests/kernels/: axpy.cuh  constants.cuh  unary.cuh
